--- a/web/src/main/webapp/resources/css/status.css
+++ b/web/src/main/webapp/resources/css/status.css
@@ -33,10 +33,8 @@
 .child {
 	cursor: pointer;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     color: white!important;
-    min-width: 250px;
-    min-height: 50px;
     align-items: center;
     padding: 0px 15px;
     margin: 1px 10px;
@@ -44,10 +42,15 @@
     overflow: hidden;
     -webkit-box-shadow: 0px 0px 15px 2px rgb(0 0 0 / 10%);;
     box-shadow: 0px 0px 15px 2px rgb(0 0 0 / 10%);;
+    border-radius: 7px;
+    min-width: fit-content;
+    position: relative;
+    height: 40px;
 }
 
 .child h4{
 	color: white;
+	margin: 0
 }
 
 .child img {
@@ -77,4 +80,15 @@ button {
     outline: none;
     cursor: pointer;
     font-size: 25px;
+}
+
+.count-badge {
+    background-color: rgba(255, 255, 255, 0.2); /* Màu nền bán trong suốt */
+    color: white; /* Màu chữ trắng */
+    border-radius: 10px; /* Bo tròn viền */
+    padding: 2px 8px; /* Thêm khoảng cách cho số */
+    margin-left: 10px; /* Khoảng cách giữa chữ và số */
+    display: flex; /* Đảm bảo số lượng cũng được căn giữa */
+    align-items: center; /* Căn giữa theo chiều dọc trong badge */
+    justify-content: center; /* Căn giữa theo chiều ngang trong badge */
 }
