View List of Orders using Datatable

--- a/web/src/main/webapp/WEB-INF/templates/fragments/leftNavCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/leftNavCRM.html
@@ -35,9 +35,9 @@
 					href="/crm-web/orders"><i class="icon-drawer"></i><span
 						class="menu-title" data-i18n="nav.templates.main">Đơn hàng</span></a>
 					<ul class="menu-content" style="">
-						<li><a class="menu-item" href="#"
+						<li><a class="menu-item" href="/crm-web/orders"
 							data-i18n="nav.dash.fitness">Quản lý trạng thái đơn hàng</a></li>
-						<li><a class="menu-item" href="#"
+						<li><a class="menu-item"
 							data-i18n="nav.dash.project">Theo dõi đơn hàng</a></li>
 					</ul>
 				</li>
