--- a/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/common_javascript.html
@@ -6,14 +6,13 @@
 <!-- BEGIN PAGE VENDOR JS-->
 <!-- <script
 	th:src="//maps.googleapis.com/maps/api/js?key=AIzaSyBDkKetQwosod2SZ7ZGCpxuJdxY3kxo5Po"></script> -->
-<script th:src="@{/resources/app-assets/vendors/js/charts/gmaps.min.js}"></script>
+<!-- <script th:src="@{/resources/app-assets/vendors/js/charts/gmaps.min.js}"></script> -->
 <script th:src="@{/resources/app-assets/vendors/js/forms/icheck/icheck.min.js}"></script>
-<script
-	th:src="@{/resources/app-assets/vendors/js/extensions/jquery.knob.min.js}"></script>
-<script th:src="@{/resources/app-assets/vendors/js/charts/raphael-min.js}"></script>
-<script th:src="@{/resources/app-assets/vendors/js/charts/morris.min.js}"></script>
+<script th:src="@{/resources/app-assets/vendors/js/extensions/jquery.knob.min.js}"></script>
+<!-- <script th:src="@{/resources/app-assets/vendors/js/charts/raphael-min.js}"></script>
+<script th:src="@{/resources/app-assets/vendors/js/charts/morris.min.js}"></script> -->
 <script th:src="@{/resources/app-assets/vendors/js/extensions/unslider-min.js}"></script>
-<script th:src="@{/resources/app-assets/vendors/js/charts/echarts/echarts.js}"></script>
+<!-- <script th:src="@{/resources/app-assets/vendors/js/charts/echarts/echarts.js}"></script> -->
 <!-- END PAGE VENDOR JS-->
 <!-- BEGIN ROBUST JS-->
 <script th:src="@{/resources/app-assets/js/core/app-menu.min.js}"></script>
@@ -21,10 +20,10 @@
 <script th:src="@{/resources/app-assets/js/scripts/customizer.min.js}"></script>
 <!-- END ROBUST JS-->
 <!-- BEGIN PAGE LEVEL JS-->
-<script
-	th:src="@{/resources/app-assets/js/scripts/pages/dashboard-fitness.min.js}"></script>
-<script
-	th:src="@{/resources/app-assets/js/scripts/pages/project-task-list.min.js}"></script>
+<!-- <script
+	th:src="@{/resources/app-assets/js/scripts/pages/dashboard-fitness.min.js}"></script> -->
+<!-- <script
+	th:src="@{/resources/app-assets/js/scripts/pages/project-task-list.min.js}"></script> -->
 <!-- END PAGE LEVEL JS-->
 
 <!-- BEGIN VENDOR JS-->
