update: add totalCustomer button to 'find customer by status" bar, add func to count all customers, adjust scroll buttons

--- a/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/customerListCRMScreen.html
@@ -238,7 +238,7 @@
 												<div class="table-responsive">
 													<table id="table" class="table table-bordered">
 														<thead>
-															<tr>
+															<tr class="bg"> 
 																<th style="width: 2%" data-field="select" class="th1">
 																	<input type="checkbox" id="select-all"
 																	class="d-flex align-items-center justify-content-center" />
@@ -369,6 +369,8 @@
 		src="resources/app-assets/js/update/fetchCustomersByStatus.js"></script>
 	<script type="text/javascript"
 		src="resources/app-assets/js/update/customerList_JS.js"></script>
+	<script type="text/javascript"
+		src="resources/app-assets/js/update/customerList_js_2.js"></script>	
 	<script type="text/javascript"
 		src="resources/app-assets/js/update/toggleCheckboxActions.js"></script>
 	<script type="text/javascript"
