View name of customers from backend to UI of search condition, view current date in the position of Ngày lập, Ngày giao, load all order's statuses on updateOrderModal.html

--- a/web/src/main/webapp/resources/css/order.css
+++ b/web/src/main/webapp/resources/css/order.css
@@ -243,3 +243,7 @@ button.closeBtn {
     --bs-table-striped-bg: none!important;
     --bs-table-hover-color: none !important;
 }
+/* Nút search của datatable */
+input[type="search"] {
+    color: black;
+}
