--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Datatable.html
@@ -36,75 +36,11 @@
 		<!-- BEGIN CONTENT WRAPPER -->
 		<th:block th:include="fragments/ordersContentWrapperCRM"></th:block>
 		<!-- END CONTENT WRAPPER -->
-		<div class="row">
-		    <div class="col-12">
-		        <div class="card">
-		            <div class="card-header">
-		                <h4 class="card-title search-condition">Điều kiện tìm kiếm</h4>
-		                <div class="heading-elements">
-		                    <ul class="list-inline mb-0">
-		                        <li><a data-action="collapse"><i class="fa-solid fa-minus"></i></a></li>
-		                        <li><a data-action="reload"><i class="fa-solid fa-rotate"></i></a></li>
-		                        <li><a data-action="expand"><i class="fa-solid fa-expand"></i></a></li>
-		                        <li><a data-action="close"><i class="fa-solid fa-xmark"></i></a></li>
-		                    </ul>
-		                </div>
-		            </div>
-		            <div class="card-content collapse show">
-		                <div class="card-body search-condition">
-		                    <div class="row">
-		                        <div class="col-md-3 col-sm-12">
-		                            <fieldset class="text-left customer-option">
-		                                <h5>Khách hàng</h5>
-		                                <select style="background-color: white; color: black; width: 100%;">
-		                                    <option value="kh1">Khách hàng 1</option>
-		                                    <option value="kh2">Khách hàng 2</option>
-		                                    <option value="kh3">Khách hàng 3</option>
-		                                </select>
-		                            </fieldset>
-		                            <fieldset class="text-left ordercate-option">
-		                                <h5>Loại đơn hàng</h5>
-		                                <select id="orderCategorySelect" onchange="loadOrderStatuses_Datatable()" 
-		                                		style="background-color: white; color: black; width: 100%;">
-											<th:block th:each="orderCategory : ${orderCategories}">
-								                <option th:value="${orderCategory.id}" th:text="${orderCategory.name}"
-								                        th:selected="${orderCategory.id == selectedCategoryId}"></option>
-								            </th:block>
-		                                </select>
-		                            </fieldset>
-		                        </div>
-		                        
-		                        <div class="col-md-3 col-sm-12">
-			                        <div id="orderStatusContainer">
-			                            <fieldset class="text-left order-status">
-			                                <h5>Trạng thái đơn hàng</h5>
-			                                    <th:block th:each="orderStatus : ${orderStatuses}">
-										            <label>
-										                <input type="checkbox" name="orderStatus" th:value="${orderStatus.id}" class="custom-checkbox checkbox-spacing" th:text="${orderStatus.name}"/> 
-										            </label><br/>
-									        	</th:block>
-			                            </fieldset>
-			                        </div>
-		                        </div>
-		                        <div class="col-md-3 col-sm-12">
-		                            <fieldset class="text-left startdate-option">
-		                                <h5>Ngày lập</h5>
-		                                <input type="date" style="width: 100%; padding: 5px; color: black; background-color: white;">
-		                            </fieldset>
-		                            <fieldset class="text-left delidate-option">
-		                                <h5>Ngày giao</h5>
-		                                <input type="date" style="width: 100%; padding: 5px; color: black; background-color: white;">
-		                            </fieldset>
-		                            <fieldset class="text-right">
-		                            	<button type="submit" class="search-order" style="margin-top: 10px;">Tìm</button>
-		                            </fieldset>
-		                        </div>
-		                    </div>
-		                </div>
-		            </div>
-		        </div>
-		    </div>
-		</div>
+		
+		<!-- BEGIN SEARCH CONDITION -->
+		<th:block th:include="fragments/searchCondition_Datatable"></th:block>
+		<!-- END SEARCH CONDITION -->
+		
 		<div class="row">
 			<div class="col-12">
 				<div class="order-screen-datatable">
@@ -112,6 +48,27 @@
 				</div>
 			</div>
 		</div>
+		
+		<div id="statusModal">
+		    <h3>Cập nhật trạng thái đơn hàng được chọn</h3>
+		    <select id="statusSelect">
+		        <option value="1">Nhận đơn</option>
+		        <option value="2">Lưu kho</option>
+		        <option value="3">Vận chuyển</option>
+		        <option value="4">Lưu kho lạnh</option>
+		        <option value="5">Giao hàng</option>
+		    </select>
+		    <br><br>
+		    <button onclick="saveStatus()">Lưu</button>
+		    <button onclick="closeModal()">Đóng</button>
+		</div>
+		<div id="modalOverlay" onclick="closeModal()">
+		</div>
+		
+		<!-- BEGIN UPDATE MODAL -->
+		<th:block th:include="fragments/updateOrderModal"></th:block>
+		<!-- END UPDATE MODAL -->
+		
 	</div>
 	<!-- END CONTENT -->
 	
@@ -136,7 +93,9 @@
     
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/navigate.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/createOrder.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/loadOrderStatus_Datatable.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/loadOrderStatuses_Datatable.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/getCurrentDate_Handsontable.js}"></script>
+	
    
 </body>
 </html>
