--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Hansontable.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen_Hansontable.html
@@ -45,75 +45,9 @@
 		<th:block th:include="fragments/ordersContentWrapperCRM"></th:block>
 		<!-- END CONTENT WRAPPER -->
 		
-		<div class="row">
-		    <div class="col-12">
-		        <div class="card">
-		            <div class="card-header">
-		                <h4 class="card-title search-condition">Điều kiện tìm kiếm</h4>
-		                <div class="heading-elements">
-		                    <ul class="list-inline mb-0">
-		                        <li><a data-action="collapse"><i class="fa-solid fa-minus"></i></a></li>
-		                        <li><a data-action="reload"><i class="fa-solid fa-rotate"></i></a></li>
-		                        <li><a data-action="expand"><i class="fa-solid fa-expand"></i></a></li>
-		                        <li><a data-action="close"><i class="fa-solid fa-xmark"></i></a></li>
-		                    </ul>
-		                </div>
-		            </div>
-		            <div class="card-content collapse show">
-		                <div class="card-body search-condition">
-		                    <div class="row">
-		                        <div class="col-md-3 col-sm-12">
-		                            <fieldset class="text-left customer-option">
-		                                <h5>Khách hàng</h5>
-		                                <select style="background-color: white; color: black; width: 100%;">
-		                                    <option value="kh1">Khách hàng 1</option>
-		                                    <option value="kh2">Khách hàng 2</option>
-		                                    <option value="kh3">Khách hàng 3</option>
-		                                </select>
-		                            </fieldset>
-		                            <fieldset class="text-left ordercate-option">
-		                                <h5>Loại đơn hàng</h5>
-		                                <select id="orderCategorySelect" onchange="loadOrderStatuses()" 
-		                                		style="background-color: white; color: black; width: 100%;">
-											<th:block th:each="orderCategory : ${orderCategories}">
-								                <option th:value="${orderCategory.id}" th:text="${orderCategory.name}"
-								                        th:selected="${orderCategory.id == selectedCategoryId}"></option>
-								            </th:block>
-		                                </select>
-		                            </fieldset>
-		                        </div>
-		                        
-		                        <div class="col-md-3 col-sm-12">
-			                        <div id="orderStatusContainer">
-			                            <fieldset class="text-left order-status">
-			                                <h5>Trạng thái đơn hàng</h5>
-			                                    <th:block th:each="orderStatus : ${orderStatuses}">
-										            <label>
-										                <input type="checkbox" name="orderStatus" th:value="${orderStatus.id}" class="custom-checkbox checkbox-spacing" th:text="${orderStatus.name}"/> 
-										            </label><br/>
-									        	</th:block>
-			                            </fieldset>
-			                        </div>
-		                        </div>
-		                        <div class="col-md-3 col-sm-12">
-		                            <fieldset class="text-left startdate-option">
-		                                <h5>Ngày lập</h5>
-		                                <input type="date" style="width: 100%; padding: 5px; color: black; background-color: white;">
-		                            </fieldset>
-		                            <fieldset class="text-left delidate-option">
-		                                <h5>Ngày giao</h5>
-		                                <input type="date" style="width: 100%; padding: 5px; color: black; background-color: white;">
-		                            </fieldset>
-		                            <fieldset class="text-right">
-		                            	<button type="submit" class="search-order" style="margin-top: 10px;">Tìm</button>
-		                            </fieldset>
-		                        </div>
-		                    </div>
-		                </div>
-		            </div>
-		        </div>
-		    </div>
-		</div>
+		<!-- BEGIN SEARCH CONDITION -->
+		<th:block th:include="fragments/searchCondition_Handsontable"></th:block>
+		<!-- END SEARCH CONDITION -->
 		
 		<div class="row">
 			 <div class="col-12">
@@ -140,123 +74,10 @@
 		<div id="modalOverlay" onclick="closeModal()">
 		</div>
 		
-		<div id="updateOrderModal">
-			<h3 id="title">Cập nhật đơn hàng</h3>
-			<div class="closeBtnDiv" style="text-align: right;">
-				<button onclick="closeModal()" class="closeBtn"><i class="fas fa-times"></i></button>
-			</div>
-			<hr>
-		    <form id="orderForm">
-			    <div class="form-row">
-				    <div class="form-group col-md-4">
-				      <label for="inputDate">Ngày tạo</label>
-				      <input type="date" class="form-control" id="orderDate" placeholder="dd/mm/yyyy" required>
-				    </div>
-				    <div class="form-group col-md-4">
-				      <label for="inputState">Trạng thái</label>
-				      <select id="inputState" class="form-control">
-				        <option selected>Chọn trạng thái...</option>
-				        <option value="1">Nhận đơn</option>
-				        <option value="2">Lưu kho</option>
-				        <option value="3">Vận chuyển</option>
-				        <option value="4">Lưu kho lạnh</option>
-				        <option value="5">Giao hàng</option>	
-				      </select>
-				    </div>
-				    <div class="form-group col-md-4">
-				      <label for="inputOrderCode">Mã đơn hàng</label>
-				      <input type="text" class="form-control" id="orderCode">
-				    </div>
-				</div>
-		    	
-			    <br/><div class="row2">
-			    	
-					    <div class="form-row">
-					        <div class="form-group col-md-6">
-					            <label for="goodsType">Loại hàng hóa</label>
-					            <input type="text" class="form-control" id="goodsType">
-					        </div>
-					        <div class="form-group col-md-6">
-					            <label for="transportMethod">Phương tiện vận chuyển</label>
-					            <input type="text" class="form-control" id="transportMethod">
-					        </div>
-					    </div>
-			    </div>
-			    
-			    <div class="container">
-					<div class="column">
-				        <fieldset>
-				            <legend>Thông tin người gửi</legend>
-				            <table class="sender-table">
-				                <tr>
-				                    <td>Họ tên:</td>
-				                    <td><input type="text" class="input-container" /></td>
-				                </tr>
-				                <tr>
-				                    <td>SDT:</td>
-				                    <td><input type="text" class="input-container" placeholder="(+84) 1234567890" /></td>
-				                </tr>
-				                <tr>
-				                    <td>Email:</td>
-				                    <td><input type="email" class="input-container" /></td>
-				                </tr>
-				            </table>
-				        </fieldset>
-					</div>
+		<!-- BEGIN UPDATE MODAL -->
+		<th:block th:include="fragments/updateOrderModal"></th:block>
+		<!-- END UPDATE MODAL -->
 		
-					<div class="column col2">
-					        <fieldset>
-					            	<legend>Thông tin người nhận</legend>
-					            <table class="receiver-table">
-					                <tr>
-					                    <td>Họ tên:</td>
-					                    <td><input type="text" class="input-container" /></td>
-					                </tr>
-					                <tr>
-					                    <td>SDT:</td>
-					                    <td><input type="text" class="input-container" placeholder="(+84) 1234567890" /></td>
-					                </tr>
-					                <tr>
-					                    <td>Email:</td>
-					                    <td><input type="email" class="input-container" /></td>
-					                </tr>
-					            </table>
-					        </fieldset>
-					</div>
-			</div>
-		        
-		        <div class="row2">
-		        	<div class="form-row">
-					        <div class="form-group col-md-6">
-					            <label for="goodsType">Yêu cầu</label>
-					            <div data-mdb-input-init class="form-outline">
-									<textarea class="form-control" id="textAreaExample2" rows="8"></textarea>
-								</div>
-					        </div>
-					        <div class="form-group col-md-6">
-					            <label for="transportMethod">Địa chỉ</label>
-					            <div data-mdb-input-init class="form-outline">
-									<textarea class="form-control" id="textAreaExample2" rows="8"></textarea>
-								</div>
-					        </div>
-					    </div>
-		        </div>
-		
-		        <div class="row3">
-					<legend class="legent-row3">Tự động cập nhật qua các kênh</legend>
-					<label><input type="checkbox" id="emailUpdate" style="margin-left: 30px; background-color: gray; color: black;"> Email</label>
-					<br><label><input type="checkbox" id="zaloUpdate" style="margin-left: 30px; background-color: gray; color: black;"> Zalo</label><span> (+84) 0987654321</span>
-						<a href="#" style="color: #6942ca;"> Thay đổi</a>
-					<br><label><input type="checkbox" id="smsUpdate" style="margin-left: 30px; background-color: gray; color: black;"> SMS</label><span> (+84) 0987654321</span>
-						<a href="#" style="color: #6942ca;"> Thay đổi</a>
-				</div>
-			        
-				<div class="row4">
-					<button type="button" onclick="saveOrder()">Lưu</button>
-		        	<button type="button" onclick="closeModal()">Trở về</button>
-				</div>
-		    </form>
-		</div>
 	</div>
 	
 	<!-- END CONTENT -->
@@ -273,7 +94,8 @@
 	<script type="text/javascript" th:src="@{/resources/js/orders/init.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/navigate.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/createOrder.js}"></script>
-	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/loadOrderStatus.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/loadOrderStatuses_Handsontable.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/app-assets/js/update/getCurrentDate_Handsontable.js}"></script>
 	<!-- Screen Javascripts -->
 
 </body>
